# fastapi-app-template

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  pyrightconfig.json  requirements-dev.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: pull_request_template.md
.github/workflows/: code-check.yml
alembic/: env.py
alembic/versions/: 20250203_0856_7b773d42c9f7_create_users_table.py  20250205_1400_55e7479c9328_add_password_reset_tokens.py
app/: main.py
app/api/: __init__.py
app/api/api_v1/: __init__.py
app/api/di/: auth_dependency.py  auth_di.py  domain_di.py  infra_di.py  invite_di.py  mail_di.py
app/constants/: mail_constant.py  regex_constant.py  token_constant.py
app/core/: config.py  exception.py  response.py
app/core/errors/: codes.py
app/core/exception_handlers/: __init__.py  validation_handler.py
app/core/i18n/: __init__.py  error_message.py  locale_helper.py  manager.py  validation_helper.py
app/core/middleware/: __init__.py  error_handler.py  (+1 more)
app/db/: database.py
app/enums/: __init__.py  base_enum.py
app/models/: __init__.py  base_model.py  custom_types.py  model_helpers.py  password_reset.py  user.py
app/schemas/: __init__.py  base_response_model.py  base_response_schema.py  base_schema.py  error_response.py  validation_error.py
app/seeds/: __init__.py  reset_test_users.py  seed_manager.py  user_seed.py
app/static/: site.webmanifest
app/templates/: error.html  inertia.html
app/utils/: common_util.py  datetime_util.py
app/web/: __init__.py  config.py  inertia_pages.py
deploy/: Dockerfile  entrypoint.sh
docker/: Dockerfile
frontend-inertia/: .prettierrc.json  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend-inertia/src/: main.css  main.tsx
scripts/: ruff-container.sh  vscode-auto-setup-dev.sh  vscode-setup-container-dev.sh  vscode-setup-local-dev.sh
scripts/invite/: Makefile  README.md  cli.py
(+96 files in other folders)
